# NAI

./: .env  NAI_SummaryBot.py  NAI_bot.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt  testdata.py  translatory_porownanie .py
bot-new/: README.md  pyproject.toml
bot-new/bot_new/: db_config.py  dc_bot.py  telegram2.py
bot-test/: pyproject.toml
bot-test/bot_test/: BotRunner.py  __init__.py  test.html
bot-test/bot_test/bot_config/: db_config.py  jiraConfig.py  methods.py  scheduler.py  schedulerJira.py
bot-test/bot_test/conf/: db_config.py  methods.py
bot-test/bot_test/dc/: dc_bot.py  qdrant2.py
bot-test/bot_test/jira/: __init__.py  createTask.py  jira_send_test.py  jira_test.py  jira_tst2.py
bot-test/bot_test/slack/: __init__.py  slackv2.py
bot-test/bot_test/slack/v3/: SlackV3.py  callFunctions.py  intentDetector.py  jira.py
bot-test/bot_test/slack/v4/: CreateTask.py  SlackV4.py  qdrant.py  reminder.py
bot-test/bot_test/teams/: config.py
bot-test/bot_test/teams/bots/: echo_bot.py
bot-test/bot_test/telegram/: __init__.py  nai.py  telegram2.py  webhook.py
bot-test/myproject/: .env  .gitignore
bot-test/myproject/myapp/: apps.py  decorators.py  forms.py  models.py  serializer.py  urls.py  views.py
bot-test/myproject/myapp/jobs/: create_notifications.py  jira_task_update.py  reminder_dispatcher.py
bot-test/myproject/myapp/migrations/: 0001_initial.py  0002_remove_group_profile_image_group_group_images.py  0003_remove_group_created_at_remove_group_description.py  0004_group_join_code.py  0005_alter_group_join_code.py  0006_file.py  0007_file_content_alter_file_file_and_more.py  0008_remove_file_content.py  0009_uploadedfile_delete_file.py
bot-test/myproject/myapp/static/css/: activity-widget.css  calendar-months.css  calendar-widget.css  calendar.css  home.css  login.css  main.css  mainPageTeams.css  notification.css  project.css  projects-widget.css  projects.css  reminder-widget.css  task.css  taskList.css  tasks-widget.css  tasks.css  teamPage.css  teams-widget.css
bot-test/myproject/myapp/static/js/: addDeletedWidget.js  calendar-widget-resize.js  calendar.js  calendarDay.js  calendarMonth.js  calendarView.js  calendarWeek.js  chat.js  commentForm.js  dateSet.js  dragWidget.js  footer.js  notifications.js  progressBar.js  project_edit.js  scrolldown.js  (+12 more)
bot-test/myproject/myapp/templates/: Tasks.html  base.html  calendar-project.html  calendar.html  calendarRaw.html  groups.html  home.html  login.html  main.html  profile.html  search_files.html  teamCreate.html  teamJoin.html  teamPage.html  teamPageRaw.html  teamsRaw.html  update_profile.html  upload_file.html
bot-test/myproject/myapp/utils/: bot_logic.py  jira_logic.py  minio_utils.py  profile_img_generator.py  qdrant.py  site_bot.py  trello_logic.py
bot-test/myproject/myproject/: settings.py  urls.py
bot-test/myproject/staticfiles/css/: calendar-widget.css  calendar.css  home.css  logo.css  main.css  mainPageTeams.css  noLogin.css  notification.css  project.css  projects-board.css  projects-widget.css  projects.css  reminder-widget.css  signUp.css  singleTask.css  tasks-widget.css  tasks.css  teamPage.css
bot-test/myproject/staticfiles/images/: att1.avif
bot-test/myproject/staticfiles/js/: calendarMonth.js  calendarView.js  calendarWeek.js  chatWithBot.js  chatbot.js  dragWidget.js  editModal.js  login.js  main.js  notifications.js  panel.js  projectsPanel.js  scrollshadow.js  sideOptionWidget.js  signUp.js  tasksPanel.js  teamPage.js  widgetPanel.js
boty-old/: pyproject.toml
boty-old/bots/: db_config.py
nai2/: pyproject.toml
nai2/boty/: NAI_bot.py  discord.py
(+241 files in other folders)
